bulk fix(styles for ios, custom fields, prefixes, white spaces etc)

--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -98,6 +98,7 @@
   font-weight: 300;
   text-transform: uppercase;
   overflow: hidden;
+  white-space: nowrap;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
