--- a/src/css/media.css
+++ b/src/css/media.css
@@ -35,6 +35,7 @@ and (max-device-width : 1024px)  {
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px) {
 	.main_nav{
+		padding-top: 12px;
 	  padding-right: 10px;
 	  padding-left: 10px;
 	}
@@ -46,7 +47,7 @@ and (max-device-width : 1024px)  {
 
 	#navbar_content > .navbar-nav > .nav-item > .nav-link{
 			padding: 0px;
-  	  font-size: 13px;
+  	  font-size: 13.40px;
   	}
 
 	.dropdown-item{
@@ -54,11 +55,15 @@ and (max-device-width : 1024px)  {
 	}
 
 	.navbar-brand{
-	  margin-right: 15px;
+	  margin-right: 12px;
 	}
 
 	.navbar-brand svg{
-	  height: 25px;
+	  height: 27px;
+	}
+
+	#lang_code{
+		padding-right: 0px;
 	}
 
 	.footer_logo{
@@ -143,6 +148,10 @@ and (max-device-width : 1024px)  {
 	  -webkit-box-shadow: 0px 3px 10px -1px rgba(97,109,126,0.9);
 	  -moz-box-shadow: 0px 3px 10px -1px rgba(97,109,126,0.9);
 	  box-shadow: 0px 3px 10px -1px rgba(97,109,126,0.9);
+	}
+
+	#navbar_content>.navbar-nav>.nav-item{
+		text-align: center;
 	}
 
 	#navbar_content>.navbar-nav>.nav-item{
